<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.activities.LoginActivity">

    <TextView
        android:id="@+id/tv_title_activity_login"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_dimen_16"
        android:text="@string/tv_login_text"
        app:layout_constraintBottom_toTopOf="@+id/et_email_activity_login"
        app:layout_constraintLeft_toLeftOf="@+id/et_password_activity_login"
        app:layout_constraintRight_toRightOf="@+id/et_password_activity_login" />

    <ProgressBar
        android:id="@+id/pb_loading_activity_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_dimen_8"
        android:ems="10"
        android:hint="@string/et_email_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password_activity_login"
        app:layout_constraintLeft_toLeftOf="@+id/et_password_activity_login"
        app:layout_constraintRight_toRightOf="@+id/et_password_activity_login" />

    <EditText
        android:id="@+id/et_password_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login_activity_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_dimen_32"
        android:layout_marginRight="@dimen/base_dimen_32"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tb_access_mode_status_activity_login"
        app:layout_constraintRight_toLeftOf="@+id/tb_access_mode_status_activity_login" />

    <Button
        android:id="@+id/btn_register_activity_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_dimen_32"
        android:layout_marginStart="@dimen/base_dimen_32"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tb_access_mode_status_activity_login"
        app:layout_constraintLeft_toRightOf="@+id/tb_access_mode_status_activity_login" />

    <ToggleButton
        android:id="@+id/tb_access_mode_status_activity_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@drawable/btn_text_color_selector"
        android:textOff="@string/btn_register_text"
        android:textOn="@string/btn_login_text"
        app:layout_constraintLeft_toLeftOf="@+id/et_password_activity_login"
        app:layout_constraintRight_toRightOf="@+id/et_password_activity_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password_activity_login" />
</android.support.constraint.ConstraintLayout>
